# ElectroSim

./: CMakeLists.txt  README.md
include/: Particle.hpp  Simulator.hpp
src/: Simulator.cpp  main.cpp
